--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "supertest": "^3.4.1"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
