--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "supertest": "^3.4.1"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "rewire": "^4.0.1"
   }
 }
